Update branch for release 2.0 (#25)
* Separate profiles

* Add exec permissions

* Execute tests on pull request

* Change reporting method

* Add tasks for testing

* Change tests dependencies

* Add test logging

* Add tasks for listing tests

* Change report output path

* Change jacoco output for coverage and specific testing execution

* player controller

* fix imports

* Add tests

* Add profiles to tests

---------

Co-authored-by: rodrigo.bolanos <rodrimanuelbw@gmail.com>